Fix: Explicitly add CSS to hide score groups

--- a/index.html
+++ b/index.html
@@ -1125,6 +1125,11 @@
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
             display: inline-block;
         }
+
+        /* Force Hide Scores per requirement */
+        .score-group {
+            display: none !important;
+        }
     </style>
 </head>
 
