--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
+            /* Move content to top */
             min-height: 100vh;
             margin: 0;
             padding: 20px;
+            padding-top: 40px;
+            /* Add specific top spacing */
             color: #37474F;
         }
 
@@ -36,13 +39,13 @@
             background: var(--card-bg);
             border-radius: 24px;
             box-shadow: var(--shadow-deep);
-            padding: 2.5rem;
+            padding: 2rem 1.5rem;
+            /* Reduced padding */
             text-align: center;
             position: relative;
             overflow: hidden;
             border: 1px solid rgba(255, 255, 255, 0.8);
             min-height: 500px;
-            /* Ensure space for modal */
             display: flex;
             flex-direction: column;
         }
