Fix: Add hidden score elements to prevent missing ID errors

--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,10 @@
             <button class="speed-btn" onclick="changeSpeed(1.5)">1.5×</button>
         </div>
 
+        <!-- Hidden Score Elements to prevent JS Errors -->
+        <span id="score-today" style="display: none;"></span>
+        <span id="score-total" style="display: none;"></span>
+
         <div id="success-overlay">
             <div class="success-badge">PERFECT! +20</div>
         </div>
