Feat: Add Q&A structure with English audio/text questions

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <div class="context-close" onclick="hideContext()">×</div>
         </div>
 
+        <div class="english-question" id="question-display"></div>
         <div class="korean-text" id="question-text">
             Loading...
         </div>
