Feat: Add Chili UI and dev tools to test Spicy levels

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
         <!-- Progress Tracking HUD -->
         <div class="progress-hud">
+            <!-- Chili Level Indicator -->
+            <div class="chili-display" onclick="testSpicyLevel()" title="Test Spicy Level 1">
+                <span id="chili-icon">🌶️</span>
+                <span id="chili-count">x 0</span>
+            </div>
+
             <div class="day-info" style="justify-content: space-between; align-items: center; width: 100%;">
                 <div style="display: flex; gap: 8px; align-items: center;">
                     <span id="day-number">Day 1 of 28</span>
