Add comment for Trigger Deployment in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             </div>
 
             <!-- Game 2: Drop -->
+            <!-- Trigger Deployment 2026-01-14 -->
+            
             <div class="game-card" onclick="launchDropGame()">
                 <div class="card-icon">🚀</div>
                 <div class="card-title">Rainbow Drop</div>
