Fix Pattern Builder bugs: TTS duplication, auto-progression, and 3-strikes logic. Update CSS for mobile and fullscreen.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <!-- Lobby Screen -->
     <div id="lobby-screen" class="lobby-container">
+        <button id="fullscreen-btn" class="fullscreen-btn" onclick="toggleFullscreen()" title="Toggle Fullscreen">
+            <span id="fullscreen-icon">⛶</span>
+        </button>
         <h1 class="lobby-title">RAINBOW GRAMMAR ARCADE 🌈</h1>
         <div class="game-cards">
             <!-- Game 1: Structure -->
