Fix mobile screen shifting and overscroll issues using dvh and touch-action

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Grammar Rainbow Game</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="stylesheet" href="css/styles.css">
@@ -29,7 +30,7 @@
 
             <!-- Game 2: Drop -->
             <!-- Trigger Deployment 2026-01-14 -->
-            
+
             <div class="game-card" onclick="launchDropGame()">
                 <div class="card-icon">🚀</div>
                 <div class="card-title">Rainbow Drop</div>
